Añadir documentación y mejorar estructura archivos del asistente médico * Incluye template de archivo para variables de ambiente. * Se ajusta lectura de variables de ambiente utilizando librería `python-dotenv`. Ver explicación en <docs/Uso seguro de API keys.md>. * Ajuste de requerimientos, por revisión mecanismo de memoria de LangChain.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 # Por completar lista de dependencias
+python-dotenv
 numpy
-openai
-redis
+pydantic
 
 uvicorn
 fastapi
 
+openai
+redis
+requests
 langchain
 langchain-core
 langchain-text-splitters
+langchain_openai
 langsmith
