--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 # Lista de dependencias
+pydantic
 python-docx
+python-dotenv
 numpy
 pandas
-pydantic
-python-dotenv
 rich
 
 Flask
@@ -13,6 +13,7 @@ redis
 requests
 langchain
 langchain-core
+langchain-community
 langchain-text-splitters
-langchain_openai
+langchain-openai
 langsmith
